--- a/1: Customer and Market Analysis/Sentiment Analysis/sentiment_analysis.ipynb
+++ b/1: Customer and Market Analysis/Sentiment Analysis/sentiment_analysis.ipynb
@@ -16,8 +16,8 @@
         "1. Polarity with VADER\n",
         "2. Contextual Polarity with Bert\n",
         "\n",
-        "Then we'll explore 2 methods of extracting themes and insights:\n",
-        "1."
+        "Then we'll explore 1 method of extracting themes and insights from sentiment:\n",
+        "1. Aspect-Based Sentiment Analysis"
       ]
     },
     {
