Price optim models

--- a/2: Sales and Revenue Optimization/Price Optimization/price_optimization.ipynb
+++ b/2: Sales and Revenue Optimization/Price Optimization/price_optimization.ipynb
@@ -2272,6 +2272,35 @@
    "source": [
     "## Conclusion"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['bed1', 'garden5', 'consoles1', 'garden7', 'health9', 'cool4',\n",
+       "       'health3', 'perfumery1', 'cool5', 'health8', 'garden4',\n",
+       "       'computers5', 'garden10', 'computers6', 'health6', 'garden6',\n",
+       "       'health10', 'watches2', 'health1', 'garden8', 'garden9',\n",
+       "       'watches6', 'cool3', 'perfumery2', 'cool2', 'computers1',\n",
+       "       'consoles2', 'health5', 'watches8', 'furniture4', 'watches5',\n",
+       "       'health7', 'bed3', 'garden3', 'bed2', 'furniture3', 'watches4',\n",
+       "       'watches3', 'furniture2', 'garden2', 'furniture1', 'health2',\n",
+       "       'garden1', 'cool1', 'computers4', 'watches7', 'computers3',\n",
+       "       'health4', 'watches1', 'computers2', 'bed4', 'bed5'], dtype=object)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['product_id'].unique()"
+   ]
   }
  ],
  "metadata": {
